--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
                 var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
                 csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
         
                 
 
