--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
                 var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
                 csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
                 return csv;
+             } catch (e) {
+                console.error(e);
+                return "";
+             }
+        }
+        return gk_fileData[filename] || "";
+        }
         
                 
 
