--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
         return gk_fileData[filename] || "";
         }
         </script><!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>OCR</title>
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>Optical Character Recognition</h1>
+  <div class="container">
+    <input type="file" id="fileInput" accept="image/*,.pdf">
+    <button onclick="processFile()">Extract Text</button>
+    <div id="progress"></div>
+    <div id="output"></div>
+  </div>
+
+  <script src="https://unpkg.com/pdfjs-dist@3.11.174/build/pdf.min.js"></script>
+  <script src="https://unpkg.com/tesseract.js@5.1.0/dist/tesseract.min.js"></script>
+  <script src="ocr.js"></script>
+  <script src="utils.js"></script>
+  <script src="main.js"></script>
+</body>
+</html>
         
                 
 
